Added supplies endpoint
