# src/routes/supplierSuppliesProductRoutes.js
@@ -1,0 +1,15 @@
+const express = require('express');
+
+const {
+    getSupplies,
+    createSupply,
+    deleteSupply,
+} = require('../controllers/supplierSuppliesProductController');
+
+const router = express.Router();
+
+router.get('/', getSupplies);
+router.post('/', createSupply);
+router.delete('/:id', deleteSupply);
+
+module.exports = router;
